--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
    ],
    "dependencies": {
       "prompt": "^1.1.0",
+      "readline-sync": "^1.4.10",
       "underscore": "*"
    },
    "devDependencies": {
